# SWE-web

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CNAME  README.md
Assets/Images/: icon48x48.h
Assets/Shaders/swe/: fs_swe.sc  varying.def.sc  vs_swe.sc
CMake/: FindImGui.cmake  FindNetCDF.cmake  Findbgfx.cmake  Findglfw3.cmake  Findimgui.cmake  FindnetCDF.cmake  GetGitRevisionDescription.cmake
Docker/: Dockerfile
Public/: SWE-App.html  SWE-App.js  SWE-App.wasm
Scripts/: convert_netcdf.py  shader-mac.mk  shader.mk
Source/: CMakeLists.txt  Shell.html
Source/App/: Camera.cpp  Camera.hpp  SweApp.cpp  SweApp.hpp  Utils.cpp  Utils.hpp
Source/Blocks/: Block.cpp  Block.hpp  DimensionalSplitting.cpp  DimensionalSplitting.hpp
Source/Core/: Application.cpp  Application.hpp  EntryPoint.cpp  Input.cpp  Input.hpp
Source/Core/ImGui/: ImGuiBgfx.cpp  ImGuiBgfx.hpp
Source/Runners/: SWE-DimensionalSplitting-Runner.cpp
Source/Scenarios/: ArtificialTsunamiScenario.cpp  ArtificialTsunamiScenario.hpp  NetCDFScenario.cpp  NetCDFScenario.hpp  RealisticScenario.cpp  RealisticScenario.hpp  Scenario.cpp  Scenario.hpp  TestScenario.hpp  TsunamiScenario.cpp  TsunamiScenario.hpp
Source/Solvers/: Fwave.cpp  Fwave.hpp
Source/Types/: BoundaryType.hpp  Common.hpp  Float2D.hpp  RealType.hpp  ScenarioType.hpp  Vec.hpp  ViewType.hpp
public/: SWE-App.html  SWE-App.js  SWE-App.wasm
